<resources>
    <string name="app_name">食汇居</string>

    <!--登录界面-->
    <string name="log">宁夏大学食堂管理系统</string>
    <string name="please_userid">请输入用户名</string>
    <string name="please_password">请输入密码</string>
    <string name="remenber_pass">记住密码</string>
    <string name="forget_pass">找回密码</string>
    <string name="update_pass">修改密码</string>
    <string name="login">登录</string>
    <string name="login_loging">登录中...</string>

    <string name="logined_member_username">logined_member_username</string>
    <string name="logined_member_password">logined_member_password</string>
    <string name="logined_member_ischeck">logined_member_ischeck</string>
    <string name="logined_member_displayName">logined_member_displayName</string>
    <string name="logined_member_personId">logined_member_personId</string>
    <string name="logined_member_birth">logined_member_birth</string>
    <string name="logined_member_sex">logined_member_sex</string>
    <string name="logined_member_department">logined_member_department</string>
    <string name="vip">vip</string>

    <string name="login_sex">sex</string>
    <string name="login_loginid">loginid</string>
    <string name="login_displayName">displayName</string>
    <string name="login_departmrnt">departmrnt</string>
    <string name="locationsite">locationsite</string>
    <string name="permissions">permissions</string>
    <string name="login_error_empty_user">用户名不能为空</string>
    <string name="login_error_empty_passwd">密码不能为空</string>

    <string name="exit_text">再按一次退出程序</string>
    <string name="yhmhmmcw_text">用户名或密码错误</string>

    <string name="file_provider">com.pgyersdkjfeam.provider</string>


    <!--网络信息提示-->
    <string name="error_title">错误</string>
    <string name="error_obtain_once">无法获取ONCE</string>
    <string name="error_network_exception">网络通信异常，请稍后重试</string>
    <string name="error_network_disconnect">网络不可达,请连接Wifi或者移动数据网络</string>
    <string name="error_reply">提交失败</string>
    <string name="error_create_topic">无法创建新话题</string>
    <string name="error_login">无法登录</string>
    <string name="error_fav_nodes">收藏节点错误</string>
    <string name="error_fav_topic">收藏话题错误</string>
    <string name="error_get_profile">无法获取用户个人资料</string>
    <string name="error_unknown">未知错误</string>

    <!--登录信息提示-->
    <string name="login_successful_hint">登陆成功</string>
    <string name="offline_login_text">首次登陆,必须访问网络</string>
    <string name="login_successful_text">离线登录成功</string>

    <string name="settings">设置</string>
    <string name="help">帮助</string>
    <string name="string_help_text">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。\n\n最后点击两次后退按钮，即可返回。</string>
    <string name="quit">退出</string>

    <string name="my_houqin">后勤信息</string>
    <string name="my_version">版本信息</string>
    <string name="my_about">关于我们</string>
    <string name="my_shezhi">设置</string>
    <string name="updatepassword">修改密码</string>

    <string name="my_information">个人信息</string>
    <string name="today">推荐</string>
    <string name="order">订单</string>
    <string name="setting_data_clear">清除缓存</string>
    <string name="birth">生日</string>
    <string name="littlename">昵称</string>
    <string name="number">账号</string>
    <string name="sex">性别</string>

    <!--获取信息提示-->
    <string name="get_data_info_fail">获取信息失败</string>
    <string name="have_not_data_txt">暂无相关数据</string>
    <string name="loading">正在加载中...</string>

    <string name="foodtype">货品选择</string>
    <string name="comment">评价</string>
    <string name="more">查看全部评价>></string>
    <string name="information">详细信息</string>

</resources>
