<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/login_background">

        <TextSwitcher
            android:id="@+id/textSwitcher"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="bottom" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="90dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/log"
            android:textColor="@color/white"
            android:textSize="23sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/login_shape"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10dp">

                <ImageView
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:src="@drawable/logo" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="48dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/login_user"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_gravity="center">

                <com.example.administrator.ljh_project.ui.ClearEditText
                    style="@style/ClearEditText"
                    android:id="@+id/user_login_id"
                    android:hint="@string/please_userid"
                    android:layout_marginTop="17dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="5dp"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="48dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/login_password"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_gravity="center">

                <com.example.administrator.ljh_project.ui.ClearEditText
                    style="@style/ClearEditText"
                    android:id="@+id/user_login_password"
                    android:hint="@string/please_password"
                    android:inputType="textPassword"
                    android:layout_marginTop="17dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="5dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/isremenber_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/checkbox"
                     />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remenber_pass"
                    android:textColor="@color/gray"
                    android:textSize="16dp" />
                <TextView
                    android:id="@+id/forget_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:layout_marginRight="20dp"
                    android:text="@string/forget_pass"
                    android:textColor="@color/gray"
                    android:textSize="16dp" />
            </LinearLayout>

            <Button
                android:id="@+id/user_login"
                android:layout_width="250dp"
                android:layout_height="35dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/btn_selector"
                android:text="@string/login"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_gravity="center"/>

        </LinearLayout>

        <TextView
            android:id="@+id/zhuce_text"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="注册"
            android:textColor="@color/press_button_color"
            android:textSize="18sp" />
    </LinearLayout>
</RelativeLayout>
