<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray">

    <include layout="@layout/title_main"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimens_10dp"
        android:background="@drawable/content_bg"
        android:orientation="vertical">

        <!--<RelativeLayout-->
            <!--android:id="@+id/littlname"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="horizontal"-->
            <!--android:padding="@dimen/dimens_10">-->


            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_centerVertical="true"-->
                <!--android:text="@string/littlename"-->
                <!--android:textColor="@color/gray"-->
                <!--android:textSize="16dp" />-->

            <!--<TextView-->
                <!--android:id="@+id/littlename"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_alignParentRight="true"-->
                <!--android:layout_centerVertical="true"-->
                <!--android:drawableRight="@drawable/my_into"-->
                <!--android:layout_marginRight="@dimen/dimens_10dp"-->
                <!--android:text=""-->
                <!--android:textColor="@color/gray"-->
                <!--android:textSize="@dimen/dimens_18sp"/>-->
        <!--</RelativeLayout>-->


        <!--<View-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="1dp"-->
            <!--android:background="@drawable/line"></View>-->

        <RelativeLayout
            android:id="@+id/setting_data_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/dimens_10">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/number"
                android:textColor="@color/gray"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/cache_size_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dimens_10dp"
                android:text=""
                android:textColor="@color/gray"
                android:textSize="@dimen/dimens_18sp"/>
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimens_10dp"
        android:background="@drawable/content_bg"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/dimens_10">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/birth"
                android:textColor="@color/gray"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/birth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:drawableRight="@drawable/my_into"
                android:layout_marginRight="@dimen/dimens_10dp"
                android:text=""
                android:textColor="@color/gray"
                android:textSize="16dp"/>
        </RelativeLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/line"></View>

        <RelativeLayout
            android:id="@+id/user_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/dimens_10">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/sex"
                android:textColor="@color/gray"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/sex_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dimens_10dp"
                android:text=""
                android:drawableRight="@drawable/my_into"
                android:textColor="@color/gray"
                android:textSize="16dp"/>
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>